--- a/Frontend/src/app/dashboard/components/admin-dashboard/admin-dashboard.component.html
+++ b/Frontend/src/app/dashboard/components/admin-dashboard/admin-dashboard.component.html
@@ -12,7 +12,7 @@
           <a
     [routerLink]="['/dashboard/AddAsset']"
     routerLinkActive="router-link-active"
-    >Asset Submit</a>
+    >Add Asset</a>
         </th>
         <th>
           <a [routerLink]="['/dashboard/Assets']" routerLinkActive="router-link-active"
