--- a/Frontend/src/app/dashboard/components/Forms/add-vendor/add-vendor.component.html
+++ b/Frontend/src/app/dashboard/components/Forms/add-vendor/add-vendor.component.html
@@ -106,3 +106,60 @@
     </div>
   </div>
 </section>
+
+<br/>
+<!-- Reactive Form -->
+
+<!-- <form [formGroup]="vendorForm" (ngSubmit)="submitVendorDetails()">
+  <div class="mb-3 leftBox">
+    <label for="name" class="form-label">Name</label>
+    <input
+      type="text"
+      class="form-control"
+      formControlName="name"
+      placeholder="Enter Name"
+      [(ngModel)]="vendor.name"
+    />
+  </div>
+  <div class="mb-3 rightBox">
+    <label for="contact" class="form-label">Contact No</label>
+    <input
+      type="text"
+      class="form-control"
+      name="contact"
+      formControlName="contact"
+      placeholder="Enter Contact Number"
+      [(ngModel)]="vendor.contactNo"
+    />
+  </div>
+  <div class="mb-2">
+    <label for="address" class="form-label">Address</label>
+    <textarea
+      type="textarea"
+      class="form-control"
+      name="address"
+      formControlName="address"
+      [(ngModel)]="vendor.address"
+    ></textarea>
+  </div>
+  <div class="mb-3 leftBox">
+    <label for="registration">Registration Date</label>
+    <input
+      class="form-control"
+      name="registration"
+      disabled="disabled"
+      [(ngModel)]="vendor.registrationDate"
+    />
+  </div>
+  <div class="mb-3 rightBox">
+    <label for="termination">Termination Date</label>
+    <input
+      type="date"
+      class="form-control"
+      name="termination"
+      formControlName="termination"
+      [(ngModel)]="vendor.terminationDate"
+    />
+  </div>
+  <button type="submit" [disabled]="vendorForm.invalid">Send</button>
+</form> -->
