--- a/Frontend/src/app/dashboard/components/Forms/asset-transaction/asset-transaction.component.html
+++ b/Frontend/src/app/dashboard/components/Forms/asset-transaction/asset-transaction.component.html
@@ -3,7 +3,7 @@
   <h1>Asset Transaction</h1>
   <form #assignAsset="ngForm" (ngSubmit)="addAssetTransaction()">
     <div class="mb-3 leftBox">
-      <label for="assetSelection" class="form-label">Select Asset</label>&nbsp;
+      <label for="assetSelection" class="form-label">Select Asset<sup class="star">*</sup></label>&nbsp;
       <select name="assetSelection" [(ngModel)]="transaction.assetId" style="width: 96%; height: 40%;" #assetSelection="ngModel">
         <option value="" *ngFor="let item of assets" [value]="item.id">
           {{ item.tyape }}&emsp;{{ item.name }}&emsp;{{ item.ram }}
@@ -12,7 +12,7 @@
       <span *ngIf="assetSelection.invalid && assetSelection.touched" class="errorMessage">Select Valid Asset</span>
     </div>
     <div class="mb-3 middleBox">
-      <label for="userName" class="form-label">User Name</label>
+      <label for="userName" class="form-label">User Name<sup class="star">*</sup></label>
       <input
         type="text"
         class="form-control"
@@ -25,7 +25,7 @@
       <span *ngIf="userName.invalid && userName.touched" class="errorMessage">Enter Valid User Name</span>
     </div>
     <div class="mb-3 rightBox">
-      <label for="employeeId" class="form-label">Emp Id</label>
+      <label for="employeeId" class="form-label">Emp Id<sup class="star">*</sup></label>
       <input
       style="width: 96%;"
         type="text"
@@ -38,7 +38,7 @@
       <span *ngIf="employeeId.invalid && employeeId.touched" class="errorMessage">Enter Valid Employee Id</span>
     </div>
     <div class="mb-3 leftBox">
-      <label for="Email" class="form-label">Email</label>
+      <label for="Email" class="form-label">Email<sup class="star">*</sup></label>
       <input
       style="width: 96%;"
         type="text"
@@ -52,7 +52,7 @@
       <span *ngIf="Email.invalid && Email.touched" class="errorMessage">Enter Valid Email</span>
     </div>
     <div class="mb-3 middleBox">
-      <label for="Location" class="form-label">Location</label>
+      <label for="Location" class="form-label">Location<sup class="star">*</sup></label>
       <select [(ngModel)]="transaction.location" name="Location" style="width: 96%; height: 40%;" #Location="ngModel" >
         <option value="HJDU1">HJU1</option>
         <option value="HJDU2">HJU2</option>
@@ -60,7 +60,7 @@
       <span *ngIf="Location.invalid && Location.touched" class="errorMessage">Enter Valid Location</span>
     </div>
     <div class="mb-3 rightBox ">
-      <label for="IssueDate" class="form-label">Issue Date</label>
+      <label for="IssueDate" class="form-label">Issue Date<sup class="star">*</sup></label>
       <input
       style="width: 96%;"
         type="date"
@@ -84,7 +84,7 @@
       <span *ngIf="SubmitDate.invalid && SubmitDate.touched" class="errorMessage">Select Valid Date</span>
     </div>
     <div class="mb-3 middleBox">
-      <label for="IssuedBy" class="form-label">Issued By</label>
+      <label for="IssuedBy" class="form-label">Issued By<sup class="star">*</sup></label>
       <input
         type="text"
         class="form-control"
@@ -96,7 +96,7 @@
       <span *ngIf="IssuedBy.invalid && IssuedBy.touched" class="errorMessage">Enter Valid Name</span>
     </div>
     <div class="mb-3 rightBox">
-      <label for="Department" class="form-label">Department</label>
+      <label for="Department" class="form-label">Department<sup class="star">*</sup></label>
       <select [(ngModel)]="transaction.department" name="Department" style="width: 96%; height: 40%;" #Department="ngModel" >
         <option value="P&D" selected="selected">P&D</option>
         <option value="DU1">DU1</option>
