--- a/Frontend/src/app/dashboard/components/Forms/add-asset/add-asset.component.html
+++ b/Frontend/src/app/dashboard/components/Forms/add-asset/add-asset.component.html
@@ -3,7 +3,7 @@
     <h1>Add Asset</h1>
     <form class="form" #assetForm="ngForm" (ngSubmit)="SubmitAsset()">
       <div class="mb-3 leftBox">
-        <label for="Type" class="form-label">Type of Asset</label>
+        <label for="Type" class="form-label">Type of Asset<sup class="star">*</sup></label>
         <select [(ngModel)]="asset.tyape" name="Type" style="width: 96%;" #type="ngModel">
           <option value="LAPTOP" selected="selected">LAPTOP</option>
           <option value="MAC">MAC</option>
@@ -13,7 +13,7 @@
         <span *ngIf="type.invalid && type.touched" class="errorMessage">Select Valid Type</span>
       </div>
       <div class="mb-3 middleBox">
-        <label for="Name" class="form-label">Name</label>
+        <label for="Name" class="form-label">Name<sup class="star">*</sup></label>
         <input
           type="text"
           placeholder="Name"
@@ -26,7 +26,7 @@
         <span *ngIf="name.invalid && name.touched" class="errorMessage">Enter Valid Name</span>
       </div>
       <div class="mb-3 rightBox">
-        <label for="Proprietary" class="form-label">Proprietary</label>
+        <label for="Proprietary" class="form-label">Proprietary<sup class="star">*</sup></label>
         <select [(ngModel)]="asset.proprietary" name="Proprietary" style="width: 96%;" #Proprietary="ngModel">
           <option value="OWN" selected="selected">OWN</option>
           <option value="RENT">RENT</option>
@@ -35,7 +35,7 @@
       </div>
       <br>
       <div class="mb-3 leftBox">
-        <label for="configuration" class="form-label">Configuration</label>
+        <label for="configuration" class="form-label">Configuration<sup class="star">*</sup></label>
         <input
           style="width: 96%;"
           type="text"
@@ -50,7 +50,7 @@
 
       </div>
       <div class="mb-3 middleBox">
-        <label for="serviceTag" class="form-label">Service Tag</label>
+        <label for="serviceTag" class="form-label">Service Tag<sup class="star">*</sup></label>
         <input
           type="text"
           placeholder="serviceTag"
@@ -64,7 +64,7 @@
 
       </div>
       <div class="mb-3 rightBox">
-        <label for="model" class="form-label">Model</label>
+        <label for="model" class="form-label">Model<sup class="star">*</sup></label>
         <input
         style="width: 96%;"
           type="text"
@@ -78,7 +78,7 @@
         <span *ngIf="model.invalid && model.touched" class="errorMessage">Enter Valid Model</span>
       </div>
       <div class="mb-3 leftBox">
-        <label for="hostName" class="form-label">Host Name</label>
+        <label for="hostName" class="form-label">Host Name<sup class="star">*</sup></label>
         <input
         style="width: 96%;"
           type="text"
@@ -92,14 +92,14 @@
         <span *ngIf="hostName.invalid && hostName.touched" class="errorMessage">Enter Valid Host Name</span>
       </div>
       <div class="mb-3 middleBox">
-        <label for="oem" class="form-label">OEM</label>
+        <label for="oem" class="form-label">OEM<sup class="star">*</sup></label>
         <select [(ngModel)]="asset.oem" name="oem" style="width: 96%;" >
           <option value="Yes" selected="selected">Yes</option>
           <option value="No">No</option>
         </select>
       </div>
       <div class="mb-3 rightBox">
-        <label for="expiryDate" class="form-label">Expiry Date</label>
+        <label for="expiryDate" class="form-label">Expiry Date<sup class="star">*</sup></label>
         <input
         style="width: 96%;"
           type="date"
@@ -114,7 +114,7 @@
         <span *ngIf="expiryDate.invalid && expiryDate.touched" class="errorMessage">Select Valid Date</span>
       </div>
       <div class="mb-3 leftBox">
-        <label for="owner" class="form-label">Owner</label>
+        <label for="owner" class="form-label">Owner<sup class="star">*</sup></label>
         <input
         style="width: 96%;"
           type="text"
@@ -128,7 +128,7 @@
         <span *ngIf="owner.invalid && owner.touched" class="errorMessage">Enter Valid owner Name</span>
       </div>
       <div class="mb-3 middleBox">
-        <label for="remarks" class="form-label">Remarks</label>
+        <label for="remarks" class="form-label">Remarks<sup class="star">*</sup></label>
         <input
           type="text"
           placeholder="remarks"
@@ -141,7 +141,7 @@
         <span *ngIf="remarks.invalid && remarks.touched" class="errorMessage">Enter Valid Remarks</span>
       </div>
       <div class="mb-3 rightBox">
-        <label for="ram" class="form-label">Ram</label>
+        <label for="ram" class="form-label">Ram<sup class="star">*</sup></label>
         <input
         style="width: 96%;"
           type="text"
@@ -156,7 +156,7 @@
         <span *ngIf="ram.invalid && ram.touched" class="errorMessage">Enter Valid RAM</span>
       </div>
       <div class="mb-3">
-        <label for="vendorId" class="form-label">Select Vendor</label>
+        <label for="vendorId" class="form-label">Select Vendor<sup class="star">*</sup></label>
         <select [(ngModel)]="asset.vendorId" name="vendorId">
           <option *ngFor="let item of vendors" value="{{ item.id }}">
             {{ item.name }}
