--- a/Frontend/src/app/core/components/layouts/footer/footer.component.html
+++ b/Frontend/src/app/core/components/layouts/footer/footer.component.html
@@ -1,16 +1,10 @@
 <div class="footer text-white bg-dark">
-  <br />
-  <div class="leftbox"><h2>About</h2></div>
+  <div class="leftbox" >&#169; {{ today | date : "yyyy" }} Nitor Infotech All rights reserved</div>
   <div class="middlebox">
-    With more than {{years}} years of experience in handling multiple technology
-    projects across industries, Nitor Infotech has gained strong expertise in
-    areas of technology consulting, solutioning, and product engineering. With a
-    team of 700+ technology experts, we help leading ISVs and Enterprises with
-    modern-day products and top-notch services through our tech-driven approach.
-    Digitization being our key strategy, we digitally assess their operational
-    capabilities in order to achieve our customer's end- goals.
+   <a href="https://www.nitorinfotech.com/">Read more about Nitor Infotech</a>
   </div>
   <div class="rightbox">
-    Assest Mangement &#169; {{ today | date : "yyyy" }}
+    <a href="https://www.nitorinfotech.com/terms-of-usage/" >Terms of Uses</a> | 
+    <a href="https://www.nitorinfotech.com/nitor-privacy-policy/">Privacy Policy</a>
   </div>
 </div>
