--- a/Frontend/src/app/core/components/layouts/footer/footer.component.css
+++ b/Frontend/src/app/core/components/layouts/footer/footer.component.css
@@ -3,7 +3,7 @@
   bottom:0;
   left:0;
   width:100%;
-  height: 84px;
+  height: 20px;
   background-color: #343a40;
   margin-left: 3.75rem;
   opacity: 0.9;
@@ -11,16 +11,22 @@
 
 .leftbox {
     float:left;
-    width:8%;
+    width:30%;
+    font-size: 13px;
 }
 .middlebox{
     float:left;
     font-size: 13px;
-    width:78%;
+    width:30%;
+    text-align: center;
 }
 .rightbox{
     float:right;
-    width:14%;
-    font-size: 10px;
+    width:20%;
+    font-size: 13px;
     text-align: left;
+}
+
+a{
+    color: gold;
 }
