--- a/Frontend/src/app/core/components/layouts/footer/footer.component.html
+++ b/Frontend/src/app/core/components/layouts/footer/footer.component.html
@@ -1,10 +1,12 @@
 <div class="footer text-white bg-dark">
-  <div class="leftbox" >&#169; {{ today | date : "yyyy" }} Nitor Infotech All rights reserved</div>
+  <div class="leftbox">
+    &#169; {{ today | date : "yyyy" }} Nitor Infotech All rights reserved
+  </div>
   <div class="middlebox">
-   <a href="https://www.nitorinfotech.com/">Read more about Nitor Infotech</a>
+    <a href="https://www.nitorinfotech.com/">Read more about Nitor Infotech</a>
   </div>
   <div class="rightbox">
-    <a href="https://www.nitorinfotech.com/terms-of-usage/" >Terms of Uses</a> | 
+    <a href="https://www.nitorinfotech.com/terms-of-usage/">Terms of Uses</a> |
     <a href="https://www.nitorinfotech.com/nitor-privacy-policy/">Privacy Policy</a>
   </div>
 </div>
