--- a/Frontend/src/app/core/components/layouts/header/header.component.html
+++ b/Frontend/src/app/core/components/layouts/header/header.component.html
@@ -1,18 +1,23 @@
-
-<div  [ngClass]="{'sidebarExpanded' : sidebarExpanded}">
-<nav class="navbar bg-dark">
-  <app-sidebar [isExpanded]="sidebarExpanded" (toggleSidebar)="sidebarExpanded = !sidebarExpanded"></app-sidebar>
+<div [ngClass]="{ sidebarExpanded: sidebarExpanded }">
+  <nav class="navbar bg-dark">
+    <app-sidebar
+      [isExpanded]="sidebarExpanded"
+      (toggleSidebar)="sidebarExpanded = !sidebarExpanded"
+    ></app-sidebar>
     <h1>
-      <a [routerLink]="['']" ><i class="fas fa-code"></i> Asset Management</a>
+      <a [routerLink]="['']"><i class="fas fa-code"></i> Asset Management</a>
     </h1>
     <ul *ngIf="!flag">
-      <!-- <li><button [routerLink]="['/users/register']" routerLinkActive="router-link-active" class="btn btn-dark">Register</button></li>
-      <li><a [routerLink]="['/users/login']" routerLinkActive="router-link-active">Login</a></li> -->
-      <li><button type="button" class="btn btn-dark" (click)="login()">Login</button></li>
+      <li>
+        <button type="button" class="btn btn-dark" (click)="login()">
+          Login
+        </button>
+      </li>
     </ul>
     <ul *ngIf="flag">
-      <button type="button" class="btn btn-dark" (click)="logout()" >Logout</button>
+      <button type="button" class="btn btn-dark" (click)="logout()">
+        Logout
+      </button>
     </ul>
   </nav>
 </div>
-
