--- a/Frontend/src/app/core/components/layouts/sidebar/sidebar.component.html
+++ b/Frontend/src/app/core/components/layouts/sidebar/sidebar.component.html
@@ -33,7 +33,7 @@
             </div>
             <div class="children">
                 <div class="link">
-                    <div class="content" [routerLink]="['/dashboard/Assets']" [queryParams]="{ child: '1' }"
+                    <div class="content" [routerLink]="['/dashboard/assets']" [queryParams]="{ child: '1' }"
                         [routerLinkActive]="'active'">
                         <div class="icon">
                             <svg viewBox="0 0 24 24">
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="link">
-                    <div class="content" [routerLink]="['/dashboard/ShowVenders']" [queryParams]="{ child: '2' }"
+                    <div class="content" [routerLink]="['/dashboard/show-venders']" [queryParams]="{ child: '2' }"
                         [routerLinkActive]="'active'">
                         <div class="icon">
                             <svg viewBox="0 0 24 24">
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="link">
-            <div class="content" [routerLink]="['/dashboard/AssetTransaction']" [routerLinkActive]="'active'">
+            <div class="content" [routerLink]="['/dashboard/asset-transaction']" [routerLinkActive]="'active'">
                 <div class="icon">
                     <svg viewBox="0 0 24 24">
                         <circle opacity="0.5" fill="#000000" cx="12" cy="11" r="5">
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="link">
-            <div class="content" [routerLink]="['/dashboard/AddAsset']" [routerLinkActive]="'active'">
+            <div class="content" [routerLink]="['/dashboard/add-asset']" [routerLinkActive]="'active'">
                 <div class="icon">
                     <svg viewBox="0 0 24 24">
                         <circle opacity="0.5" fill="#000000" cx="12" cy="11" r="5">
@@ -82,7 +82,7 @@
             </div>
         </div>
         <div class="link">
-            <div class="content" [routerLink]="['/dashboard/AddVendor']" [routerLinkActive]="'active'">
+            <div class="content" [routerLink]="['/dashboard/add-vendor']" [routerLinkActive]="'active'">
                 <div class="icon">
                     <svg viewBox="0 0 24 24">
                         <circle opacity="0.5" fill="#000000" cx="12" cy="11" r="5">
