--- a/Frontend/src/app/dashboard/components/pages/assets/assets.component.html
+++ b/Frontend/src/app/dashboard/components/pages/assets/assets.component.html
@@ -4,7 +4,7 @@
       <tr>
         <td style="vertical-align: middle; text-align: center">
           <button
-            [routerLink]="['/dashboard/AddAsset']"
+            [routerLink]="['/dashboard/add-asset']"
             routerLinkActive="router-link-active"
             class="btn btn-success"
           >
